// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBar Hide FilterBar 1`] = `
<DocumentFragment>
  <div
    class="FilterBar-outerContainer"
  >
    <div
      class="Toolbar-outerContainer Toolbar-clear FilterBar-filterBarHeader"
    >
      <div
        class="Toolbar-toolbar"
      >
        <span
          class="spacer"
          style="flex-grow: 1;"
        />
        <div>
          <ui5-button
            class="FilterBar-showFiltersBtn"
            design="Transparent"
            ui5-button=""
          >
            Show Filter Bar
          </ui5-button>
        </div>
      </div>
    </div>
    <div
      class="FilterBar-filterArea FilterBar-filterAreaClosed"
    >
      <div
        class="FilterGroupItem-filterItem"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              title="Classification"
              ui5-label=""
            >
              
          Classification
            </ui5-label>
          </div>
          <ui5-select
            ui5-select=""
            value-state="None"
          >
            <ui5-option
              ui5-option=""
            >
              Option 1
            </ui5-option>
            <ui5-option
              selected="true"
              ui5-option=""
            >
              Option 2
            </ui5-option>
            <ui5-option
              ui5-option=""
            >
              Option 3
            </ui5-option>
            <ui5-option
              ui5-option=""
            >
              Option 4
            </ui5-option>
          </ui5-select>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FilterBar Render without crashing - default props 1`] = `
<DocumentFragment>
  <div
    class="FilterBar-outerContainer"
  >
    <div
      class="Toolbar-outerContainer Toolbar-clear FilterBar-filterBarHeader"
    >
      <div
        class="Toolbar-toolbar"
      >
        <span
          class="spacer"
          style="flex-grow: 1;"
        />
        <div>
          <ui5-button
            class="FilterBar-showFiltersBtn"
            design="Transparent"
            ui5-button=""
          >
            Hide Filter Bar
          </ui5-button>
        </div>
      </div>
    </div>
    <div
      class="FilterBar-filterArea FilterBar-filterAreaOpen"
    >
      <div
        class="FilterGroupItem-filterItem"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              title="Classification"
              ui5-label=""
            >
              
          Classification
            </ui5-label>
          </div>
          <ui5-select
            value-state="None"
          >
            <ui5-option
              ui5-option=""
            >
              Option 1
            </ui5-option>
            <ui5-option
              selected="true"
              ui5-option=""
            >
              Option 2
            </ui5-option>
            <ui5-option
              ui5-option=""
            >
              Option 3
            </ui5-option>
            <ui5-option
              ui5-option=""
            >
              Option 4
            </ui5-option>
          </ui5-select>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FilterBar Render without crashing - w/ filter dialog 1`] = `
<DocumentFragment>
  <div
    class="FilterBar-outerContainer FilterBar-filterItemExpand"
  >
    <div
      class="Toolbar-outerContainer Toolbar-clear FilterBar-filterBarHeader"
    >
      <div
        class="Toolbar-toolbar"
      >
        <div>
          <div
            class="VariantManagement-container"
          >
            <ui5-title
              class="VariantManagement-title"
              level="H4"
              ui5-title=""
            >
              Variant 1
            </ui5-title>
            <ui5-button
              design="Transparent"
              icon="navigation-down-arrow"
              ui5-button=""
            />
          </div>
        </div>
        <div>
          <div
            class="ToolbarSeparator-separator"
          />
        </div>
        <div>
          <div>
            <ui5-input
              placeholder="Search"
              type="Text"
              ui5-input=""
              value-state="None"
            />
          </div>
        </div>
        <span
          class="spacer"
          style="flex-grow: 1;"
        />
        <div>
          <ui5-button
            design="Transparent"
            ui5-button=""
          >
            Clear
          </ui5-button>
        </div>
        <div>
          <ui5-button
            design="Transparent"
            ui5-button=""
          >
            Restore
          </ui5-button>
        </div>
        <div>
          <ui5-button
            class="FilterBar-showFiltersBtn"
            design="Transparent"
            ui5-button=""
          >
            Hide Filter Bar
          </ui5-button>
        </div>
        <div>
          <ui5-button
            design="Default"
            ui5-button=""
          >
            Filters (1337)
          </ui5-button>
        </div>
        <div>
          <ui5-button
            design="Emphasized"
            ui5-button=""
          >
            Go
          </ui5-button>
        </div>
      </div>
    </div>
    <div
      class="FilterBar-filterArea FilterBar-filterAreaOpen"
    >
      <div
        class="FilterGroupItem-filterItem"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              title="Input"
              ui5-label=""
            >
              
          Input
            </ui5-label>
          </div>
          <ui5-input
            placeholder="Placeholder"
            type="Text"
            ui5-input=""
            value-state="None"
          />
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              title="Switch"
              ui5-label=""
            >
              
          Switch
            </ui5-label>
          </div>
          <ui5-switch
            ui5-switch=""
          />
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              title="SELECT w/ initial selected"
              ui5-label=""
            >
              
          SELECT w/ initial selected
            </ui5-label>
          </div>
          <ui5-select
            ui5-select=""
            value-state="None"
          >
            <ui5-option
              ui5-option=""
            >
              Option 1
            </ui5-option>
            <ui5-option
              selected="true"
              ui5-option=""
            >
              Option 2
            </ui5-option>
            <ui5-option
              ui5-option=""
            >
              Option 3
            </ui5-option>
            <ui5-option
              ui5-option=""
            >
              Option 4
            </ui5-option>
          </ui5-select>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              title="SELECT w/o initial selected"
              ui5-label=""
            >
              
          SELECT w/o initial selected
            </ui5-label>
          </div>
          <ui5-select
            ui5-select=""
            value-state="None"
          >
            <ui5-option
              data-key="Test 1"
              icon="add"
              selected="true"
              ui5-option=""
            >
              Test 1
            </ui5-option>
            <ui5-option
              data-key="Test 2"
              icon="add"
              ui5-option=""
            >
              Test 2
            </ui5-option>
            <ui5-option
              data-key="Test 3"
              icon="add"
              ui5-option=""
            >
              Test 3
            </ui5-option>
            <ui5-option
              data-key="Test 4"
              icon="add"
              ui5-option=""
            >
              Test 4
            </ui5-option>
            <ui5-option
              data-key="Test 5"
              icon="add"
              ui5-option=""
            >
              Test 5
            </ui5-option>
          </ui5-select>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              required="true"
              title="MultBox"
              ui5-label=""
            >
              Group 2: 
          MultBox
            </ui5-label>
          </div>
          <ui5-multi-combobox
            ui5-multi-combobox=""
            value-state="None"
          >
            <ui5-mcb-item
              text="MultiComboBoxItem 1"
              ui5-mcb-item=""
            />
            <ui5-mcb-item
              text="MultiComboBoxItem 2"
              ui5-mcb-item=""
            />
            <ui5-mcb-item
              text="MultiComboBoxItem 3"
              ui5-mcb-item=""
            />
            <ui5-mcb-item
              text="MultiComboBoxItem 4"
              ui5-mcb-item=""
            />
          </ui5-multi-combobox>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <ui5-label
              required="true"
              title="Date Picker"
              ui5-label=""
            >
              Group 2: 
          Date Picker
            </ui5-label>
          </div>
          <ui5-date-picker
            primary-calendar-type="Gregorian"
            ui5-date-picker=""
            value-state="None"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FilterBar Toggle Filters Dialog 1`] = `
Array [
  <ui5-dialog
    opened=""
    style="z-index: 102; display: block;"
  >
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 FilterBarDialog-header-0"
      slot="header"
    >
      <ui5-title
        level="H4"
      >
        Filters
      </ui5-title>
      <ui5-input
        placeholder="Search for Filters"
        type="Text"
        value-state="None"
      >
        <ui5-icon
          name="search"
          slot="icon"
        />
      </ui5-input>
    </div>
    <div
      class="Bar-bar-0 Bar-footer-0"
      data-bar-part="Root"
      slot="footer"
    >
      <div
        class="Bar-left-0"
        data-bar-part="Left"
      />
      <div
        class="Bar-center-0"
        data-bar-part="Center"
      >
        <div
          class="Bar-inner-0"
        />
      </div>
      <div
        class="Bar-right-0"
        data-bar-part="Right"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentEnd-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 FilterBarDialog-footer-0"
        >
          <ui5-button
            design="Emphasized"
          >
            Go
          </ui5-button>
          <ui5-button
            design="Default"
          >
            Clear
          </ui5-button>
          <ui5-button
            design="Default"
          >
            Restore
          </ui5-button>
          <ui5-button
            design="Default"
          >
            Save
          </ui5-button>
          <ui5-button
            design="Transparent"
          >
            Cancel
          </ui5-button>
        </div>
      </div>
    </div>
    <div
      class="FilterBarDialog-dialog-0"
    >
      <div
        class="FilterBarDialog-fbSearch-0"
      >
        <span />
        <ui5-input
          placeholder="Search"
          type="Text"
          value=""
          value-state="None"
        />
      </div>
      <div
        class="FilterBarDialog-groupContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentSpaceBetween-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-title
            class="FilterBarDialog-groupTitle-0"
            level="H5"
          >
            Basic
          </ui5-title>
          <span
            class="Text-text-0 Text-noWrap-0"
          >
            Show on Filter Bar
          </span>
        </div>
        <div
          class="FilterBarDialog-filters-0"
        >
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    title="Input"
                  >
                    
          Input
                  </ui5-label>
                </div>
                <ui5-input
                  placeholder="Placeholder"
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    title="Switch"
                  >
                    
          Switch
                  </ui5-label>
                </div>
                <ui5-switch />
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    title="SELECT w/ initial selected"
                  >
                    
          SELECT w/ initial selected
                  </ui5-label>
                </div>
                <ui5-select
                  value-state="None"
                >
                  <ui5-option>
                    Option 1
                  </ui5-option>
                  <ui5-option
                    selected="true"
                  >
                    Option 2
                  </ui5-option>
                  <ui5-option>
                    Option 3
                  </ui5-option>
                  <ui5-option>
                    Option 4
                  </ui5-option>
                </ui5-select>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    title="SELECT w/o initial selected"
                  >
                    
          SELECT w/o initial selected
                  </ui5-label>
                </div>
                <ui5-select
                  value-state="None"
                >
                  <ui5-option
                    data-key="Test 1"
                    icon="add"
                    selected="true"
                  >
                    Test 1
                  </ui5-option>
                  <ui5-option
                    data-key="Test 2"
                    icon="add"
                  >
                    Test 2
                  </ui5-option>
                  <ui5-option
                    data-key="Test 3"
                    icon="add"
                  >
                    Test 3
                  </ui5-option>
                  <ui5-option
                    data-key="Test 4"
                    icon="add"
                  >
                    Test 4
                  </ui5-option>
                  <ui5-option
                    data-key="Test 5"
                    icon="add"
                  >
                    Test 5
                  </ui5-option>
                </ui5-select>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
        </div>
      </div>
      <div
        class="FilterBarDialog-groupContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentSpaceBetween-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-title
            class=""
            level="H5"
          >
            Group 2
          </ui5-title>
        </div>
        <div
          class="FilterBarDialog-filters-0"
        >
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    required="true"
                    title="MultBox"
                  >
                    
          MultBox
                  </ui5-label>
                </div>
                <ui5-multi-combobox
                  value-state="None"
                >
                  <ui5-mcb-item
                    text="MultiComboBoxItem 1"
                  />
                  <ui5-mcb-item
                    text="MultiComboBoxItem 2"
                  />
                  <ui5-mcb-item
                    text="MultiComboBoxItem 3"
                  />
                  <ui5-mcb-item
                    text="MultiComboBoxItem 4"
                  />
                </ui5-multi-combobox>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              disabled="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    required="true"
                    title="Date Picker"
                  >
                    
          Date Picker
                  </ui5-label>
                </div>
                <ui5-date-picker
                  primary-calendar-type="Gregorian"
                  value-state="None"
                />
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              disabled="true"
              value-state="None"
            />
          </div>
        </div>
      </div>
    </div>
  </ui5-dialog>,
  <div
    class="FilterBar-outerContainer-0"
  >
    <div
      class="Toolbar-outerContainer-0 Toolbar-clear-0 FilterBar-filterBarHeader-0"
    >
      <div
        class="Toolbar-toolbar-0"
      >
        <div>
          <div
            class="VariantManagement-container-0"
          >
            <ui5-title
              class="VariantManagement-title-0"
              level="H4"
            >
              Variant 1
            </ui5-title>
            <ui5-button
              design="Transparent"
              icon="navigation-down-arrow"
            />
            <ui5-responsive-popover
              header-text="Variants"
              horizontal-align="Center"
              placement-type="Bottom"
              vertical-align="Center"
            >
              <ui5-button
                class="VariantManagement-footer-0"
                design="Emphasized"
                slot="footer"
              >
                Cancel
              </ui5-button>
              <ui5-list
                mode="SingleSelect"
                separators="All"
              >
                <ui5-li
                  actionable=""
                  data-key="1"
                  has-title=""
                  info-state="None"
                  selected="true"
                  style="width: 300px;"
                  type="Active"
                >
                  Variant 1
                </ui5-li>
                <ui5-li
                  actionable=""
                  data-key="2"
                  has-title=""
                  info-state="None"
                  style="width: 300px;"
                  type="Active"
                >
                  Variant 2
                </ui5-li>
              </ui5-list>
            </ui5-responsive-popover>
          </div>
        </div>
        <div>
          <div
            class="ToolbarSeparator-separator-0"
          />
        </div>
        <div>
          <div>
            <ui5-input
              placeholder="Search"
              type="Text"
              value-state="None"
            />
          </div>
        </div>
        <span
          class="spacer"
          style="flex-grow: 1;"
        />
        <div>
          <ui5-button
            design="Transparent"
          >
            Clear
          </ui5-button>
        </div>
        <div>
          <ui5-button
            design="Transparent"
          >
            Restore
          </ui5-button>
        </div>
        <div>
          <ui5-button
            class="FilterBar-showFiltersBtn-0"
            design="Transparent"
          >
            Hide Filter Bar
          </ui5-button>
        </div>
        <div>
          <ui5-button
            design="Default"
          >
            Filters (1337)
          </ui5-button>
        </div>
        <div>
          <ui5-button
            design="Emphasized"
          >
            Go
          </ui5-button>
        </div>
      </div>
    </div>
    <div
      class="FilterBar-filterArea-0 FilterBar-filterAreaOpen-0"
    >
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              title="Input"
            >
              
          Input
            </ui5-label>
          </div>
          <ui5-input
            placeholder="Placeholder"
            type="Text"
            value-state="None"
          />
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              title="Switch"
            >
              
          Switch
            </ui5-label>
          </div>
          <ui5-switch />
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              title="SELECT w/ initial selected"
            >
              
          SELECT w/ initial selected
            </ui5-label>
          </div>
          <ui5-select
            value-state="None"
          >
            <ui5-option>
              Option 1
            </ui5-option>
            <ui5-option
              selected="true"
            >
              Option 2
            </ui5-option>
            <ui5-option>
              Option 3
            </ui5-option>
            <ui5-option>
              Option 4
            </ui5-option>
          </ui5-select>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              title="SELECT w/o initial selected"
            >
              
          SELECT w/o initial selected
            </ui5-label>
          </div>
          <ui5-select
            value-state="None"
          >
            <ui5-option
              data-key="Test 1"
              icon="add"
              selected="true"
            >
              Test 1
            </ui5-option>
            <ui5-option
              data-key="Test 2"
              icon="add"
            >
              Test 2
            </ui5-option>
            <ui5-option
              data-key="Test 3"
              icon="add"
            >
              Test 3
            </ui5-option>
            <ui5-option
              data-key="Test 4"
              icon="add"
            >
              Test 4
            </ui5-option>
            <ui5-option
              data-key="Test 5"
              icon="add"
            >
              Test 5
            </ui5-option>
          </ui5-select>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              required="true"
              title="MultBox"
            >
              Group 2: 
          MultBox
            </ui5-label>
          </div>
          <ui5-multi-combobox
            value-state="None"
          >
            <ui5-mcb-item
              text="MultiComboBoxItem 1"
            />
            <ui5-mcb-item
              text="MultiComboBoxItem 2"
            />
            <ui5-mcb-item
              text="MultiComboBoxItem 3"
            />
            <ui5-mcb-item
              text="MultiComboBoxItem 4"
            />
          </ui5-multi-combobox>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              required="true"
              title="Date Picker"
            >
              Group 2: 
          Date Picker
            </ui5-label>
          </div>
          <ui5-date-picker
            primary-calendar-type="Gregorian"
            value-state="None"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FilterBar Toggle Filters Dialog 2`] = `
<div
  class="FilterBar-outerContainer-0"
>
  <div
    class="Toolbar-outerContainer-0 Toolbar-clear-0 FilterBar-filterBarHeader-0"
  >
    <div
      class="Toolbar-toolbar-0"
    >
      <div>
        <div
          class="VariantManagement-container-0"
        >
          <ui5-title
            class="VariantManagement-title-0"
            level="H4"
          >
            Variant 1
          </ui5-title>
          <ui5-button
            design="Transparent"
            icon="navigation-down-arrow"
          />
          <ui5-responsive-popover
            header-text="Variants"
            horizontal-align="Center"
            placement-type="Bottom"
            vertical-align="Center"
          >
            <ui5-button
              class="VariantManagement-footer-0"
              design="Emphasized"
              slot="footer"
            >
              Cancel
            </ui5-button>
            <ui5-list
              mode="SingleSelect"
              separators="All"
            >
              <ui5-li
                actionable=""
                data-key="1"
                has-title=""
                info-state="None"
                selected="true"
                style="width: 300px;"
                type="Active"
              >
                Variant 1
              </ui5-li>
              <ui5-li
                actionable=""
                data-key="2"
                has-title=""
                info-state="None"
                style="width: 300px;"
                type="Active"
              >
                Variant 2
              </ui5-li>
            </ui5-list>
          </ui5-responsive-popover>
        </div>
      </div>
      <div>
        <div
          class="ToolbarSeparator-separator-0"
        />
      </div>
      <div>
        <div>
          <ui5-input
            placeholder="Search"
            type="Text"
            value-state="None"
          />
        </div>
      </div>
      <span
        class="spacer"
        style="flex-grow: 1;"
      />
      <div>
        <ui5-button
          design="Transparent"
        >
          Clear
        </ui5-button>
      </div>
      <div>
        <ui5-button
          design="Transparent"
        >
          Restore
        </ui5-button>
      </div>
      <div>
        <ui5-button
          class="FilterBar-showFiltersBtn-0"
          design="Transparent"
        >
          Hide Filter Bar
        </ui5-button>
      </div>
      <div>
        <ui5-button
          design="Default"
        >
          Filters (1337)
        </ui5-button>
      </div>
      <div>
        <ui5-button
          design="Emphasized"
        >
          Go
        </ui5-button>
      </div>
    </div>
  </div>
  <div
    class="FilterBar-filterArea-0 FilterBar-filterAreaOpen-0"
  >
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            title="Input"
          >
            
          Input
          </ui5-label>
        </div>
        <ui5-input
          placeholder="Placeholder"
          type="Text"
          value-state="None"
        />
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            title="Switch"
          >
            
          Switch
          </ui5-label>
        </div>
        <ui5-switch />
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            title="SELECT w/ initial selected"
          >
            
          SELECT w/ initial selected
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-select>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            title="SELECT w/o initial selected"
          >
            
          SELECT w/o initial selected
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option
            data-key="Test 1"
            icon="add"
            selected="true"
          >
            Test 1
          </ui5-option>
          <ui5-option
            data-key="Test 2"
            icon="add"
          >
            Test 2
          </ui5-option>
          <ui5-option
            data-key="Test 3"
            icon="add"
          >
            Test 3
          </ui5-option>
          <ui5-option
            data-key="Test 4"
            icon="add"
          >
            Test 4
          </ui5-option>
          <ui5-option
            data-key="Test 5"
            icon="add"
          >
            Test 5
          </ui5-option>
        </ui5-select>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            required="true"
            title="MultBox"
          >
            Group 2: 
          MultBox
          </ui5-label>
        </div>
        <ui5-multi-combobox
          value-state="None"
        >
          <ui5-mcb-item
            text="MultiComboBoxItem 1"
          />
          <ui5-mcb-item
            text="MultiComboBoxItem 2"
          />
          <ui5-mcb-item
            text="MultiComboBoxItem 3"
          />
          <ui5-mcb-item
            text="MultiComboBoxItem 4"
          />
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            required="true"
            title="Date Picker"
          >
            Group 2: 
          Date Picker
          </ui5-label>
        </div>
        <ui5-date-picker
          primary-calendar-type="Gregorian"
          value-state="None"
        />
      </div>
    </div>
  </div>
</div>
`;
